--- a/style.css/style.css
+++ b/style.css/style.css
@@ -735,14 +735,16 @@ img {
     line-height: 0.8;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    outline: #2196f3;
+    transition:  border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-input:hover,
 .modal-form-input:focus {
+    border: 1px solid #2196f3;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
                 0px 1px 1px rgba(0, 0, 0, 0.14),
                 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border: 1px solid #2196f3;
+    
 }
 .modal-form-icon {
     display: block;
@@ -781,12 +783,11 @@ img {
     border: 1px solid #2196f3;
     border-radius: 4px;
 }
-
 .modal-form-chceckbox-accept::before {
     display: block;
     content: '';
-    width: 15px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     border: 1px solid #2196f3;
     cursor: pointer;
     margin-right: 7px;
@@ -800,9 +801,10 @@ img {
     line-height: 0.5;
     letter-spacing: 0.03em;
     color: #757575;
-    width: 423px;
+    width: 425px;
     height: 24px;
     margin-top: 20px;
+    margin-left: 12px;
 }
 .modal-form-checkbox-input-agreement:checked + .modal-form-chceckbox-accept::before {
     background-color: #2196f3;
@@ -810,6 +812,7 @@ img {
 }
 .modal-form-checkbox-agree {
     color: #2196f3;
+    margin-left: 3px;
 }
 .visually-hidden {
     position: absolute;
